--- a/app.json
+++ b/app.json
@@ -18,7 +18,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000",
+        "permissions": [
+          "GYROSCOPE"
+        ]
       }
     },
     "web": {
